# IsletsAnalyzis

./: MSC CATH_large.xlsx  README.md  isletanalysis.py  islets_summery_tidy.xlsx  main.py  merged.xlsx  pyproject.toml  test.xlsx
