[project]
name = "islets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.8.2",
    "jupyter-client>=8.6.3",
    "kaleido>=1.2.0",
    "matplotlib>=3.10.7",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "pnglatex>=1.1",
    "pynvim>=0.6.0",
    "pyperclip>=1.11.0",
    "tabulate>=0.9.0",
]
